[package]
name = "the-whole-bagel"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-set = "0.8.0"
smallstr = "0.3.0"

[dependencies.smallvec]
version = "1.14.0"
features = ["union"]

[dev-dependencies]
expect-test = "1.5"

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "third-party/vendor"
